# mandate-pipeline

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-session.yml  build-site.yml  detect.yml  discover.yml  download-past-resolutions.yml  extract.yml  fetch-documents.yml  generate.yml  heartbeat.yml  igov-signals.yml  igov-sync.yml  link.yml  pages.yml  pipeline.yml
config/: checks.yaml  igov.yaml  patterns.yaml
data/: last_discover_run.json  lineage.json  state.json
data/igov/: last_sync_run.json  last_sync_run_73.json  last_sync_run_74.json  last_sync_run_78.json  last_sync_run_79.json  last_sync_run_current.json  state.json
data/linked/: A_80_L.json  A_C.1_80_L.json  A_C.2_80_L.json  A_C.3_80_L.json  A_C.4_80_L.json  A_C.5_80_L.json  A_C.6_80_L.json  A_RES_78_127.json  A_RES_78_128.json  A_RES_78_129.json  A_RES_78_138.json  A_RES_78_140.json  A_RES_78_152.json  A_RES_78_163.json  A_RES_78_173.json  A_RES_78_180.json  A_RES_78_182.json  A_RES_78_187.json  A_RES_78_195.json  A_RES_78_208.json  A_RES_78_232.json  A_RES_78_245.json  A_RES_78_27.json  A_RES_78_3.json  A_RES_78_317.json  A_RES_78_318.json  A_RES_78_319.json  A_RES_78_327.json  A_RES_78_4.json  A_RES_78_5.json  A_RES_78_69.json  A_RES_79_10.json  A_RES_79_2.json  A_RES_79_245.json  A_RES_79_248.json  A_RES_79_258.json  A_RES_79_278.json  (+25 more)
docs/: data.json  index.html  origin_matrix.html  search-index.json  signals-info.html  signals-unified.html  signals.html
tests/: test_downloader.py  test_extractor.py  test_igov.py  test_lineage.py
(+1232 files in other folders)
